--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -121,7 +121,7 @@ https://templatemo.com/tm-516-known
     background: #252020;
     border-radius: 100%;
     text-align: center;
-    padding: 6.8em;
+    padding: 6em;
     width: 430px;
     height: 430px;
   }
@@ -348,7 +348,7 @@ https://templatemo.com/tm-516-known
 
   #home h3 {
     color: #f9f9f9;
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 300;
     margin: 0;
     padding: 5px 0 40px 0;
@@ -382,17 +382,17 @@ https://templatemo.com/tm-516-known
   .caption h3 a:hover { color: #FF3; }
 
   .home-slider .item-first {
-    background-image: url(../images/slider-image1.jpg);
+  background-image: url(../images/girl_studying_language.jpg);
 	background-position: center;
   }
 
-  .home-slider .item-second {
+  /* .home-slider .item-second {
     background-image: url(../images/slider-image2.jpg);
   }
 
   .home-slider .item-third {
     background-image: url(../images/slider-image3.jpg);
-  }
+  } */
 
 
 
