--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -80,7 +80,7 @@ https://templatemo.com/tm-516-known
   }
 
   a:hover, a:active, a:focus {
-    color: #29ca8e;
+    color: #ed254e;
     outline: none;
   }
 
@@ -258,7 +258,7 @@ https://templatemo.com/tm-516-known
 
   .custom-navbar {
     background: #ffffff;
-    border-top: 5px solid #29ca8e;
+    border-top: 5px solid #ed254e;
     border-bottom: 0;
     -webkit-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
@@ -285,7 +285,7 @@ https://templatemo.com/tm-516-known
   }
 
   .custom-navbar .navbar-nav.navbar-right li a .fa {
-    background: #29ca8e;
+    background: #ed254e;
     border-radius: 100%;
     color: #ffffff;
     width: 30px;
@@ -309,12 +309,12 @@ https://templatemo.com/tm-516-known
   }
 
   .custom-navbar .nav li a:hover {
-    background-color: #29ca8e;
+    background-color: #ed254e;
     color: #ffffff;
   }
 
   .custom-navbar .nav li.active > a {
-    background-color: #29ca8e;
+    background-color: #ed254e;
     color: #ffffff;
   }
 
@@ -444,7 +444,7 @@ https://templatemo.com/tm-516-known
   }
 
   #about figure span i {
-    background: #29ca8e;
+    background: #ed254e;
     border-radius: 50px;
     color: #ffffff;
     font-size: 25px;
@@ -580,7 +580,7 @@ https://templatemo.com/tm-516-known
   }
 
   .courses-price span {
-    background: #29ca8e;
+    background: #ed254e;
     border-radius: 2px;
     color: #ffffff;
     display: block;
@@ -683,7 +683,7 @@ https://templatemo.com/tm-516-known
   -----------------------------------------*/
 
   #contact {
-    background: #3f51b5;
+    background: #011936;
   }
 
   #contact h2 {
@@ -740,11 +740,11 @@ https://templatemo.com/tm-516-known
 
   footer {
     background: #252020;
-    padding: 120px 0;
+    padding: 40px;
   }
 
   footer .section-title {
-    padding-bottom: 10px;
+    padding-bottom: 0px;
   }
 
   footer h2 {
@@ -789,7 +789,7 @@ https://templatemo.com/tm-516-known
   .footer_menu li {
     display: inline-block;
     list-style: none;
-    margin: 5px 10px 5px 0;
+    margin: 0px 0px 0px 0;
   }
 
   .newsletter-form .form-control {
@@ -814,7 +814,7 @@ https://templatemo.com/tm-516-known
   }
 
   .newsletter-form input[type="submit"]:hover {
-    background: #29ca8e;
+    background: #ed254e;
     border-color: transparent;
   }
 
@@ -845,7 +845,7 @@ https://templatemo.com/tm-516-known
 
   .social-icon li a {
     border-radius: 100px;
-    color: #29ca8e;
+    color: #ed254e;
     font-size: 15px;
     width: 35px;
     height: 35px;
@@ -858,7 +858,7 @@ https://templatemo.com/tm-516-known
   }
 
   .social-icon li a:hover {
-    background: #29ca8e;
+    background: #ed254e;
     color: #ffffff;
   }
 
